--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
         
  <ul>
 
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
 
            <li><a href="aboutme.html"> About me</a></li> <!-- Make each indivdual page different background-->
                       
