--- a/achievements.html
+++ b/achievements.html
@@ -20,7 +20,7 @@
 		
 		<ul>
 
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
 
            <li><a href="aboutme.html"> About me</a></li> 
                       
